--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "airtable": "^0.6.0",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "webpack": "^4.29.0"
+    "webpack": "4.29.6"
   },
   "scripts": {
     "start": "react-scripts start",
